Added table of content

--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -2,7 +2,9 @@
 title: "Historical horse population in Canada"
 params:
   province: "Alberta"
-output: github_document
+output: 
+  github_document:
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
